wikijs/wikijs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-read-timeout: 300s 
  name: cluster-internal-ingress
  namespace: wikijs
spec:
  rules:
  - host: docs.apiplus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 80
