wikijs/wikijs-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wikijs
  namespace: wikijs
spec:
  hosts:
  - wiki.vongjon.com
  gateways:
  - istio-system/gateway
  http:
  - match: 
    - uri:
        prefix: /
    route:
    - destination:
        host: wikijs.wikijs.svc.cluster.local
        port:
          number: 80
